force-app/main/default/objects/CodeBuilder__Workspace__c/CodeBuilder__Workspace__c.object-meta.xml
<CustomObject>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>