force-app/main/default/objects/CodeBuilder__Workspace__c/fields/CodeBuilder__CSRFToken__c.field-meta.xml
<CustomField>
    <fullName>CodeBuilder__CSRFToken__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique random string associated with this Workspace</description>
    <externalId>true</externalId>
    <label>Token to prevent CSRF attacks</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>