force-app/main/default/objects/CodeBuilder__Workspace__c/fields/CodeBuilder__Error_State_Info__c.field-meta.xml
<CustomField>
    <fullName>CodeBuilder__Error_State_Info__c</fullName>
    <description>This field will store any sort of error response that we get from the API service during the life-cycle of the workspace.</description>
    <label>Error_State_Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>