force-app/main/default/objects/CodeBuilder__Workspace__c/fields/CodeBuilder__Last_Accessed__c.field-meta.xml
<CustomField>
    <fullName>CodeBuilder__Last_Accessed__c</fullName>
    <description>the last time the workspace was accessed.</description>
    <label>Last Accessed</label>
    <type>DateTime</type>
</CustomField>