force-app/main/default/objects/CodeBuilder__Workspace__c/fields/CodeBuilder__Status__c.field-meta.xml
<CustomField>
    <fullName>CodeBuilder__Status__c</fullName>
    <defaultValue>&apos;PROVISIONING&apos;</defaultValue>
    <description>The status of the resource that makes up the workspace.</description>
    <label>Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>