force-app/main/default/objects/CodeBuilder__Workspace__c/fields/CodeBuilder__URL__c.field-meta.xml
<CustomField>
    <fullName>CodeBuilder__URL__c</fullName>
    <description>The url to the workspace ( web ide )</description>
    <inlineHelpText>This is the url of the workspace. Opens in a new window.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>