force-app/main/default/objects/CodeBuilder__Workspace__c/validationRules/CodeBuilder__CannotChangeWorkspaceName.validationRule-meta.xml
<ValidationRule>
    <fullName>CodeBuilder__CannotChangeWorkspaceName</fullName>
    <active>false</active>
    <description>Workspace name cannot be changed</description>
    <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Workspace name cannot be changed</errorMessage>
</ValidationRule>